force-app/main/default/objects/Microsoft_Graph_Config__mdt/Microsoft_Graph_Config__mdt.object-meta.xml
<CustomObject>
    <label>Microsoft Graph Config</label>
    <pluralLabel>Microsoft Graph Configs</pluralLabel>
</CustomObject>