force-app/main/default/objects/Microsoft_Graph_Config__mdt/fields/Sync_Days_Ahead__c.field-meta.xml
<CustomField>
    <fullName>Sync_Days_Ahead__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Sync Days Ahead</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>