force-app/main/default/objects/Microsoft_Graph_Config__mdt/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <label>Tenant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>